# genuine-any-order

./: .gitignore  CITATION.cff  README.md  eval_lpmdm.py
FlexMDM/: .gitignore  NOTICE  README.md  environment.yml  paths.env.template  pyproject.toml  requirements.txt
FlexMDM/docs/: CLUSTER.md  DATA.md  MODEL_CARD.md  REPRODUCE.md  hf_checkpoint_README.md
FlexMDM/evals/: REPRODUCIBILITY.md  metrics.md  requirements-repro.txt  run_anyorder.sh  run_full_eval.sh  run_passk.sh
FlexMDM/evals/humaneval_compare/: common.py  convert_dream_traces.py  generate.py  passk.py  render_html.py  robust_passk.py  run.sh
FlexMDM/evals/tree_analysis/: __init__.py  cli.py  compute_metrics.py  visualize_final_ast_mapping.py
FlexMDM/flexmdm/: __init__.py  architecture.py  data.py  inference.py  schedules.py  train_fsdp.py  trainer.py  utils.py
FlexMDM/flexmdm/config/: fsdp_train.yaml
FlexMDM/scripts/: compare_traces.py  drop_truncated_rows.py  env.sh  merge_manifests.py  prepare_release_checkpoint.py  pretokenize.sh  train_16gpu.sh
LatentMDM/: README.md  environment.yml  eval_single.sh  job.sh  sampling.py  train_lpmdm.py
LatentMDM/data/: tiny_gsm_split_v2.py
LatentMDM/eval/: gsm8k_eval.py
LatentMDM/model/: utils.py
LatentMDM/yaml_files/: tinygsm_arm_eval.yaml  tinygsm_mdm_eval.yaml
data/: __init__.py
model/: transformer.py
yaml_files/: tinygsm_arm.yaml  tinygsm_baseline.yaml  tinygsm_lpmdm.yaml  tinygsm_lpmdm_eval.yaml
